--- a/portfolio.html
+++ b/portfolio.html
@@ -55,21 +55,21 @@
     <div class="content">
       <img src="https://via.placeholder.com/350x150" alt="Placeholder" style="width:100%">
       <h3>My Work</h3>
-      <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      <p>Eventualy this will be a real Portfolio.</p>
     </div>
   </div>
   <div class="column">
     <div class="content">
     <img src="https://via.placeholder.com/350x150" alt="Placeholder" style="width:100%">
       <h3>My Work</h3>
-      <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      <p>Eventualy this will be a real Portfolio.</p>
     </div>
   </div>
   <div class="column">
     <div class="content">
     <img src="https://via.placeholder.com/350x150" alt="Placeholder" style="width:100%">
       <h3>My Work</h3>
-      <p>Lorem ipsum dolor sit amet, tempor prodesset eos no. Temporibus necessitatibus sea ei, at tantas oporteat nam. Lorem ipsum dolor sit amet, tempor prodesset eos no.</p>
+      <p>Eventualy this will be a real Portfolio.</p>
     </div>
   </div>
   <div class="column">
