--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="home.html">Stephen Flores</a>
+              <a class="navbar-brand" href="index.html">Stephen Flores</a>
           </div>
       
     <!--this is top nav bar-->
